--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="text" id="p2_name" class="input_p_name" value="Player-2" placeholder="Player-2">
         <button id="start_butt" class="butt clr_blck">START</button>
     </div>
-    <div class="score board">
+    <div class="score board" id="score board">
         <th>ScoreBoard</th>
         <table>
             <thead>
